[package]
name = "json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
yaml-rust = "0.4"
chrono = "0.4.19"
# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_yaml = "0.8.24"
serde_derive = "1.0.117"